--- a/app/src/main/res/layout/view_restaurants.xml
+++ b/app/src/main/res/layout/view_restaurants.xml
@@ -2,13 +2,17 @@
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+
+    android:layout_marginTop="10dp"
+    android:layout_marginBottom="10dp"
+
     android:layout_width="380dp"
     android:layout_height="270dp"
-    style="@style/Theme.DigitalHouseFoods"
+    
     app:cardCornerRadius="10dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        
+
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         
