--- a/app/src/main/res/layout/view_single_restaurant.xml
+++ b/app/src/main/res/layout/view_single_restaurant.xml
@@ -1,41 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+
+    android:layout_marginTop="10dp"
+    android:layout_marginBottom="10dp"
+
+    android:layout_width="380dp"
+    android:layout_height="270dp"
+
     app:cardCornerRadius="10dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <ImageView
             android:id="@+id/meal_image"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:scaleType="fitStart"
-            android:src="@drawable/meal"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            android:layout_height="match_parent"
+            android:scaleType="fitXY"
+            tools:src="@drawable/tonyromas"
+            tools:ignore="ContentDescription" />
+
+        <View
+            android:id="@+id/meal_text_group"
+            android:layout_width="match_parent"
+            android:layout_height="90dp"
+            android:background="@color/white"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="1.0"/>
 
         <TextView
             android:id="@+id/meal_name"
-            android:layout_width="414dp"
-            android:layout_height="111dp"
+            android:layout_width="match_parent"
 
-            android:background="@color/white"
-            android:text="Salada com molho de Gengibre"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
 
+            android:layout_marginTop="12dp"
+            android:layout_marginBottom="36dp"
+            android:fontFamily="@font/roboto_bold"
+            android:textColor="@color/black"
+
+            android:textSize="30dp"
             app:layout_constraintBottom_toBottomOf="@+id/meal_image"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/meal_image"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.344" />
-
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/text_group"
+            app:layout_constraintVertical_bias="0.0"
+            tools:text="Tony Roma's" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 
 </com.google.android.material.card.MaterialCardView>
