--- a/app/src/main/res/layout/activity_meal_detail.xml
+++ b/app/src/main/res/layout/activity_meal_detail.xml
@@ -28,22 +28,29 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
 
+        android:gravity="center_horizontal"
+
+        android:textColor="#FFFFFF"
+        android:textSize="28sp"
         app:layout_constraintBottom_toTopOf="@+id/meal_detail_description"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/view"
-        app:layout_constraintVertical_bias="0.864"
+        app:layout_constraintVertical_bias="0.906"
         tools:text="Salada com molho de Gengibre" />
 
     <TextView
         android:id="@+id/meal_detail_description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="@+id/view"
+        android:paddingLeft="5dp"
 
+        android:textSize="24sp"
+
+        app:layout_constraintBottom_toBottomOf="@+id/view"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.423"
+        app:layout_constraintVertical_bias="0.429"
         tools:layout_editor_absoluteX="0dp"
         tools:text="Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusant doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis." />
 
