--- a/app/src/main/res/layout/activity_single_restaurant.xml
+++ b/app/src/main/res/layout/activity_single_restaurant.xml
@@ -1,63 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".view.SingleRestaurantActivity">
 
-    <ImageView
-        android:id="@+id/single_restaurant_image"
-
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scaleType="fitStart"
+        android:layout_height="320dp">
 
-        tools:layout_editor_absoluteX="-29dp"
-        tools:layout_editor_absoluteY="0dp"
-        tools:src="@drawable/tonyromas"
-        tools:ignore="ContentDescription" />
+        <ImageView
+            android:id="@+id/single_restaurant_image"
 
-    <TextView
-        android:id="@+id/single_restaurant_name"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="fitStart"
 
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+            tools:ignore="ContentDescription"
+            tools:layout_editor_absoluteX="0dp"
+            tools:layout_editor_absoluteY="0dp"
+            tools:src="@drawable/tonyromas" />
 
-        android:textColor="@color/white"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="@+id/single_restaurant_image"
+        <TextView
+            android:id="@+id/single_restaurant_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
 
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.06"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/single_restaurant_image"
-        app:layout_constraintVertical_bias="0.385"
-        tools:text="Tony Roma's" />
+            android:layout_marginBottom="112dp"
+            android:textColor="#FFFFFF"
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+            android:textSize="32sp"
+            app:layout_constraintBottom_toBottomOf="@+id/single_restaurant_image"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:text="Tony Roma's" />
 
-        android:text="Pratos Principais"
-        android:textColor="@android:color/darker_gray"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="@+id/single_restaurant_image"
-        app:layout_constraintTop_toTopOf="@id/single_restaurant_name"
-        app:layout_constraintVertical_bias="0.1"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.06"
-        />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+
+            android:layout_marginTop="21dp"
+            android:text="Pratos Principais"
+            android:textColor="#5A6978"
+            android:textSize="32sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/single_restaurant_name"
+            app:layout_constraintVertical_bias="1.0" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/single_restaurant_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="@+id/single_restaurant_image"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.7" />
+        android:layout_height="match_parent"
+        android:layout_marginTop="16dp"
+        />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
