--- a/app/src/main/res/layout/activity_meal_detail.xml
+++ b/app/src/main/res/layout/activity_meal_detail.xml
@@ -23,6 +23,20 @@
 
         tools:src="@drawable/meal" />
 
+    <ImageButton
+        android:id="@+id/meal_back_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@android:color/transparent"
+        android:src="@drawable/ic_baseline_arrow_back_24"
+
+        app:layout_constraintBottom_toTopOf="@+id/meal_detail_name"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.041"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.146" />
+
     <TextView
         android:id="@+id/meal_detail_name"
         android:layout_width="match_parent"
@@ -37,14 +51,14 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/view"
-        app:layout_constraintVertical_bias="0.906"
+        app:layout_constraintVertical_bias="0.732"
         tools:text="Salada com molho de Gengibre" />
 
     <TextView
         android:id="@+id/meal_detail_description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="5dp"
+        android:paddingLeft="10dp"
 
         android:textSize="24sp"
 
